# Build-RAGAI

./: .env.template  .gitignore  .gitmodules  .pylintrc  LICENSE  Project TODO List.md  README.md  autoembeds.py  prompt-cheatsheet.md  prompts_MASTER.md  pyproject.toml  todo.md  todo.txt
.archive/Basic-GPT-GUI/: requirements.txt
.archive/Basic-GPT-GUI/src/: gui.py
.archive/integrable-captioner-progressive/: V8.py  v10.py  v4.py  v6.py  v7.py
.archive/outdated-prompts/system-role/: SR-3_thorough-programmer.md  SR-4_online-searches.md
.archive/outdated-prompts/user-role/: UR-2.md
.github/: dependabot.yml
.github/.archive/: TLDR.md
.github/.archive/Basic-GPT-GUI/: .env.template  main.py
.github/.archive/integrable-captioner-progressive/: V8.py  v1.py  v10.py  v3.py  v4.py  v5.py  v6.py  v7.py
.github/workflows/: pylint.yml  python-package.yml
Auto-Embedder/: .env.template  PinEbed.py  README.md  pinembed.py  test.py  tweet_streaming_LLM-builder.py
Basic-GPT-GUI/: main.py  todo_next.txt
Basic-GPT-GUI/src/: openai_chat.py
Blind Programming/: System-Role_Prompts.md  TLDR.md  User-Role_Prompts.md  multi-shot-prompt-example.md
Blind Programming/multi-shot/: MS-2  MS-2.MD  MS-2.txt  multi-shot-prompt-sheet1.md
Blind Programming/system-role/: system-role-prompt-sheet1.md
Blind Programming/user-role/: UR-1  system-role-prompt-sheet1.md
BlindProgamming/: system prompt.txt
Custom-GPT-Uploadable_Knowledge_Base/Assistant_Architect/: 1-LangChain-Core_Concepts.md  2-LangChain-Advanced_Generative_Applications.md  2-LangChain-Buillding_Advanced_Applications.md  3-Basics_of-LangServe_and_LangSmith-Deployment_and_Tracing.md  3-LangServe-Deploy_LLMs-Host_LLM_APIs.md  3-LangServe_and_LangSmith-Deployment_and_Tracing.md  4-LangSmith-LLMs_Enhanced_Capabilities.md  4-LangSmith-Monitor_LLMs.md  5-LangChain-Pinecone_Documentation.md  Custom_Instructions.md  Custom_Instructions.txt  LangChain-Online_Official_Documentation-Learning_Resources.md
GPT Auto-embed Messages/: autoembeds.py
GPT-Chatbot/: gui.py
GPT-Prompt-Examples/: OUT-prompt-cheatsheet.md  TLDR.md
GPT-Prompt-Examples/ChatGPT_reference_chatlogs/: links.txt  shorthand-prompts.txt
GPT-Prompt-Examples/multi-shot/: MS-1.MD  MS-3_system-user-assistant.txt  MS-4_ChatGPT-read-documents.txt  MS-5_OCR-implementation.txt
GPT-Prompt-Examples/system-role/: SR-2_package-migration.md  SR-4_online-searches.md  system-role-prompt-sheet1.md
GPT-Prompt-Examples/user-role/: UR-1.MD  UR-2.md
GUI/: .env  .gitignore  gui.py  requirements.txt
HuggingFace/: image_captioner.py  v10.py  v3.py  v4.py  v5.py
HuggingFace/audio_transcription/: at1.py  requirements.txt
HuggingFace/audio_transcription/MicrophoneTranscription/: transcribe_microphone.py
HuggingFace/integrated_captioner.py/: template-config.json  template.env
LangChain/: query_local_docs.py
LangChain/Chatbots/: chroma_memory.py
LangChain/Retrieval-Agents/: qa_local_docs.py  stateful_chatbot.py
LangChain/Retrieval-Augmented-Generation/: qa_local_docs.py  test.py
OP-Stack-Automation/: README.md  pinembed.py
OpenAI/Auto-Embedder/: .env.template  README.md  pinembed.py  test.py  todo.txt
OpenAI/GPT-Prompt-Examples/: OUT-prompt-cheatsheet.md
OpenAI/GPT-Prompt-Examples/system-role/: SR-3_thorough-programmer.md
OpenAI/GPT-Prompt-Examples/user-role/: UR-2.md
OpenAI/Prompts/user-role/: UR-1.MD
Prompts/: MASTER.md  MS-6_Daethyra_Custom-Instruction_GPT4.md
Prompts/multi-shot/: MS-2_Large-Template.txt
docs/: README.md  prompt-cheatsheet.md  prompts_MASTER.md
docs/Custom GPTs/Assistant_Architect/: 1-LangChain-Python_Quickstart-Straightforward_Examples_and_Beginners_Guide.md  5-LangSmith-Guide-Tracing-Evaluation-Auditing.md  6-LangChain-VectorDatabases.md
docs/Custom-GPT-Uploadable_Knowledge_Base/: langchain_serve_smith-quick_reference-original-master.md
docs/Custom-GPT-Uploadable_Knowledge_Base/Assistant_Architect/: 1-LangChain-Quickstart.md  2-LangChain-Core_Concepts.md  2-LangChain_Expression_Language-Build_Your_First_App.md  3-LangChain-Routing-Prompt_Size_Management-Code_Writing.md  3-LangChain-Routing-Prompt_Size_Management.md  3-LangServe-HowTo_Deploy_LLMs-Host_LLM_APIs.md  4-LangServe-Guide-Deploy_LangChain_Runnables_and_Chains.md  4-LangServe-Guide.md  5-LangSmith-Guide-End2End_Examples.md  6-LangChain-Pinecone_VectorDatabase.md  6-LangChain-VectorDatabases.md  Custom_Instructions.txt
docs/Enterprise_Guides/Prompting/: Beginner-Prompt.txt
docs/jupyter_notebooks/: ask-a-book-questions.ipynb  langchain-embeddings-retrieval-agent.ipynb  langchain-qa-over-local-docs.ipynb  langsmith-walkthrough.ipynb
src/gpt-crawler/: package-lock.json
src/langchain/.archive/: README.md  agentexecutor_rag.ipynb
src/langchain/codesnippets/: bufferwindow_memory.py  chatopenai.py  multi_queryvector_retrieval.py
src/langchain/notebooks/: agentexecutor_custom_tools.ipynb  langchain-custom-tools.ipynb  langchain-embeddings-retrieval-agent.ipynb  langsmith-walkthrough.ipynb  langsmith_walkthrough.ipynb  lcel_runnables_and_chains.ipynb  learn_rag.ipynb  learn_rag_basics.ipynb  learn_rag_pinecone_chromadb.ipynb  learn_runnables_and_chains.ipynb  mongo-rag.ipynb  rag_basics.ipynb  (+8 more)
tests/: microphone_transcriber.py  op_auto_embeddings.py  retrieval_augmented_gen.py  test_fine_tune_sequence_classification_model.py  test_query_local_docs.py
(+106 files in other folders)
