[project]
name = "LLM-Utilikit"
version = "0.2.0"
description = "This library is designed to enhance large language model projects by offering a curated set of Python modules that can either serve as a robust starting point for new projects or as plug-and-play components to elevate existing ones. The library offers a rich set of pluggable components and a treasure trove of large language model prompts and templates. The library supports OpenAI, LangChain, HuggingFace, and Pinecone libraries. The README file provides a detailed description of the library's modules, including their functionalities and potential use cases. The README file also includes a mind map image and a GNU Affero GPL license."
authors = [
    {name = "Daethyra", email = "109057945+Daethyra@users.noreply.github.com"},
]
dependencies = [
    "chardet>=5.2.0",
    "numpy==1.21.5",
    "aiohttp>=3.9.0",
    "openai>=0.28.1",
    "pinecone-client>=2.2.4",
    "tokenizers>=0.14.1",
    "safetensors>=0.4.0",
    "transformers>=4.34.1",
    "langchain>=0.0.27",
    "pandas>=2.0.3",
]
requires-python = ">=3.8, <=3.11"
readme = "README.md"
license = {text = "GNU Affero General Public License"}
[tool.pdm]
index = "https://pypi.org/simple"
[tool.black]
line-length = 88  # Adjust this to your preferred line length
include = '\.pyi?$'  # Include only Python files
exclude = '''(
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
    )/
    | /( 
        \.eggs
        | \.pytest_cache
        | \.serverless
        | \.terraform
        | \.vagrant
        | \.vscode
    )/
)'''

[tool.flake8]
exclude = [
    # Exclude files that black formats
    ".venv/",
    ".git/",
    ".mypy_cache/",
    ".tox/",
    ".venv/",
    "_build/",
    "buck-out/",
    "build/",
    "dist/"
]
# Most common: [E203, E501, W503] | Specify other error codes to ignore (optional)
ignore = [
    "E203",
    "E501",
    "W503",
    "E231",
    "E701",
    "E702",
    "E711",
    "E712",
    "E722",
    "E731"
]