[project]
name = "LLM-Utilikit"
version = "1.1.0"
description = "Prebuilt AI-powered Python components for leveraging Large Language Models."
authors = [
    {name = "Daethyra", email = "109057945+Daethyra@users.noreply.github.com"},
]
dependencies = [
    "openai>=0.28.1",
    "pinecone-client>=2.2.4",
    "tokenizers>=0.14.1",
    "safetensors>=0.4.0",
    "transformers>=4.34.1",
    "langchain>=0.0.27",
    "langserve[all]>=0.0.32",
    "torch>=2.1.1",
]
requires-python = ">=3.9, <=3.10.12"
readme = "README.md"
license = {text = "GNU Affero General Public License"}
[tool.pdm]
index = "https://pypi.org/simple"

[tool.pdm.dev-dependencies]
black = [
    "black>=23.11.0",
]
flake8 = [
    "flake8>=6.1.0",
]
[tool.black]
line-length = 88  # Adjust this to your preferred line length
include = '\.pyi?$'  # Include only Python files
exclude = '''(
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
    )/
    | /( 
        \.eggs
        | \.pytest_cache
        | \.serverless
        | \.terraform
        | \.vagrant
        | \.vscode
    )/
)'''

[tool.flake8]
exclude = [
    # Exclude files that black formats
    ".venv/",
    ".git/",
    ".mypy_cache/",
    ".tox/",
    ".venv/",
    "_build/",
    "buck-out/",
    "build/",
    "dist/"
]
# Most common: [E203, E501, W503] | Specify other error codes to ignore (optional)
ignore = [
    "E203",
    "E501",
    "W503",
    "E231",
    "E701",
    "E702",
    "E711",
    "E712",
    "E722",
    "E731"
]
