[project]
name = "Build-RAGAI"
version = "2.0.0"
description = "Retrieval Augmented Generation code for AI. Prebuilt Python components for leveraging generative AI via Large Language Models."
authors = [
    {name = "Daethyra", email = "109057945+Daethyra@users.noreply.github.com"},
]
dependencies = [
    "langchain>=0.1.0",
    "openai>=0.28.1",
    "transformers>=4.34.1",
    "torch>=2.1.1",
    "ipykernel>=6.29.3",
]
requires-python = ">=3.10, <3.13"
readme = "README.md"
license = {text = "GNU Affero General Public License"}
[tool.pdm]
index = "https://pypi.org/simple"

[tool.pdm.dev-dependencies]
black = [
    "black>=23.11.0",
]
flake8 = [
    "flake8>=6.1.0",
]
[tool.black]
line-length = 88  # Adjust this to your preferred line length
include = '\.pyi?$'  # Include only Python files
exclude = '''(
    /(
        \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
    )/
    | /( 
        \.eggs
        | \.pytest_cache
        | \.serverless
        | \.terraform
        | \.vagrant
        | \.vscode
    )/
)'''

[tool.flake8]
exclude = [
    # Exclude files that black formats
    ".venv/",
    ".git/",
    ".mypy_cache/",
    ".tox/",
    ".venv/",
    "_build/",
    "buck-out/",
    "build/",
    "dist/"
]
# Most common: [E203, E501, W503] | Specify other error codes to ignore (optional)
ignore = [
    "E203",
    "E501",
    "W503",
    "E231",
    "E701",
    "E702",
    "E711",
    "E712",
    "E722",
    "E731"
]
